fix output overflowing text

--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,29 @@ h6 {
     align-items: center;
     justify-content: space-between;
 }
+.output-group__text {
+    max-height: 25rem;
+    overflow-y: scroll;
+    overflow-wrap: anywhere;
+}
+.output-group__text::-webkit-scrollbar {
+    width: 0.725rem;
+}
+.output-group__text::-webkit-scrollbar-track {
+    background-color: #010e0c;
+    border-radius: 8px;
+    cursor: default;
+}
+.output-group__text::-webkit-scrollbar-thumb {
+    background-color: #383b3b;
+    border-radius: 8px;
+}
+.output-group__text::-webkit-scrollbar-thumb:hover {
+    background-color: #383b3bb8;
+    border-radius: 8px;
+    cursor: default;
+}
+
 .output-group_btn {
     background: none;
     border: none;
